tests/unconstrained-generics.chg.stderr
type error: type annotations needed

    return foo();
           ^^^^^
