tests/unconstrained-generics.chg
fn foo<T>(): i32 {
    return 42;
}

fn main(): i32 {
    return foo();
}
